@@ -14,7 +14,7 @@
     $$10 - Trailer
     $$9  - Aktorzy
 !-->
-<scraper framework="1.1" date="2015-06-08">
+<scraper framework="1.1" date="2015-06-09">
     
     <!-- Sprawdza plik NFO !-->
     <NfoUrl dest="3">
@@ -121,8 +121,8 @@
             </RegExp>
             
             <!-- TAGLINE !-->
-            <RegExp input="$$1" output="&lt;tagline&gt;\4&lt;/tagline&gt;" dest="5+">
-                <expression fixchars="4">editorialReview[^&lt;]+&lt;[^&lt;]+&lt;(([^&lt;]+&lt;)|([^&lt;]+&lt;[^&lt;]+&lt;[^&lt;]+&lt;[^&lt;]+&lt;[^&lt;]+&lt;[^&lt;]+&lt;))[^&gt;]+&gt;([^&lt;]+)&lt;</expression>
+            <RegExp input="$$1" output="&lt;tagline&gt;\1&lt;/tagline&gt;" dest="5+">
+                <expression noclean="1" fixchars="1">editorialReview[^#]+s-15.?&gt;[^&gt;]+&gt;([^&lt;]+)&lt;</expression>
             </RegExp>
             
             <!-- OUTLINE !-->
