@@ -1,3 +1,5 @@
+[B]2.2.4[/B]
+- Poprawka: pobieranie tagline
 [B]2.2.3[/B]
 - Poprawka: pobieranie obsady
 [B]2.2.2[/B]
